--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://darsheelchudal11:darsheel@cluster0.i4rjtg0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+PORT=8000
