--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://darsheelchudal11:darsheel@cluster0.i4rjtg0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+NODE_ENV=development
+
 PORT=8000
